--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>INICIO</title>
     <meta
       name="description"
@@ -15,53 +15,52 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/85f636b7ea.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
-
   <body>
-    <header class="header">
-      <a href="/index.html">
-        <img
-          class="logo"
-          src="imagenes/share_before_waste_logo.png"
-          alt="logo"
-        />
-      </a>
-      <a href="index.html">INICIO</a>
-      <a href="iniciativas.html">INICIATIVAS</a>
-      <a href="negocio.html">NEGOCIO</a>
-      <a href="usuario.html">USUARIO</a>
-      <a href="tuopinion.html">TU OPINIÓN</a>
-    </header>
-
-    <header class="header-mobile">
-      <a class="logo-link" href="/index.html">
-        <img
-          class="logo"
-          src="imagenes/share_before_waste_logo.png"
-          alt="logo"
-        />
-      </a>
-      <input class="side-menu" type="checkbox" id="side-menu" />
-      <label class="hamb" for="side-menu"
-        ><i class="fa-solid fa-bars"></i
-      ></label>
-      <nav class="nav">
-        <ul class="menu">
-          <li><a class="selected" href="index.html">INICIO</a></li>
-          <li><a href="iniciativas.html">INICIATIVAS</a></li>
-          <li><a href="negocio.html">NEGOCIO</a></li>
-          <li><a href="usuario.html">USUARIO</a></li>
-          <li><a href="tuopinion.html">TU OPINIÓN</a></li>
-        </ul>
-      </nav>
-    </header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html">
+          <img
+            class="logo"
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <main>
-      <div class="container-fluid sin-padding">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="row g-0">
           <div class="col-lg-12">
             <img
               class="img-fluid"
@@ -70,50 +69,54 @@
             />
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="titulos">Salvemos juntos la buena comida</h1>
-            <p>
-              El desperdicio de alimentos es un gran problema y nosotros podemos
-              ser una solución.
-            </p>
-            <p>
-              Share Before Waste es la aplicación que te permite rescatar los
-              alimentos no vendidos en tus lugares favoritos.
-            </p>
-          </div>
+        <div class="col-lg-6 text-white">
+          <h1>Salvemos juntos la buena comida</h1>
+          <p>
+            El desperdicio de alimentos es un gran problema y nosotros podemos
+            ser una solución.
+          </p>
+          <p>
+            Share Before Waste es la aplicación que te permite rescatar los
+            alimentos no vendidos en tus lugares favoritos.
+          </p>
         </div>
-        <div class="col-lg-6">
-          <div>
-            <h2>Sobre nosotros</h2>
-            <p class="texto-negro">
-              Somos una empresa B que busca terminar con el desperdicio de
-              comida y darle una alternativa a aquellos que lo necesitan.
-              Creemos que un mundo sin hambre es posible. Queremos inspirar a
-              muchos jóvenes para dejar de ver el desperdicio como un problema,
-              para convertirlo en una oportunidad. El desperdicio es oro, y se
-              puede hacer mucho con él. Pero esto depende de la voluntad, la
-              tecnología y las políticas, que deben combinarse para lograr ese
-              fin. Por eso decidimos desarrollar la aplicación Share Before
-              Waste para comenzar a tratar los residuos de manera diferente,
-              algo que no es difícil, que generará un gran beneficio para las
-              personas y el medio ambiente.
-            </p>
-            <img
-              class="img-fluid rounded"
-              src="imagenes/cliente.png"
-              alt="cliente"
-            />
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6">
+            <div>
+              <h2>Sobre nosotros</h2>
+              <p class="text-dark">
+                Somos una empresa B que busca terminar con el desperdicio de
+                comida y darle una alternativa a aquellos que lo necesitan.
+                Creemos que un mundo sin hambre es posible. Queremos inspirar a
+                muchos jóvenes para dejar de ver el desperdicio como un
+                problema, para convertirlo en una oportunidad. El desperdicio es
+                oro, y se puede hacer mucho con él. Pero esto depende de la
+                voluntad, la tecnología y las políticas, que deben combinarse
+                para lograr ese fin. Por eso decidimos desarrollar la aplicación
+                Share Before Waste para comenzar a tratar los residuos de manera
+                diferente, algo que no es difícil, que generará un gran
+                beneficio para las personas y el medio ambiente.
+              </p>
+              <div class="col-lg-6 row">
+                <img
+                  class="img-fluid float-end"
+                  src="imagenes/cliente.png"
+                  alt="cliente"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
             <h2>Misión</h2>
-            <p class="texto-negro">
-              > Reducir el desperdicio de alimentos y marcar la diferencia.
-              Somos una empresa emergente cuya misión es hacer más sostenible el
+            <p class="text-dark">
+              Reducir el desperdicio de alimentos y marcar la diferencia. Somos
+              una empresa emergente cuya misión es hacer más sostenible el
               sistema alimentario mundial. Nuestra aplicación ofrece a las
               personas poder comprar comida no vendida de los locales de su
               alrededor y que de otro modo se desperdiciaría. En lugar de tirar
@@ -124,11 +127,11 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
             <h2>Valores</h2>
-            <p class="texto-negro">
+            <p class="text-dark">
               Son la expresión de los principios que nos guían y por los que
               respondemos.
             </p>
@@ -142,9 +145,13 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="row g-0 ">
+        <div class="row g-0">
           <div class="col-lg-12">
-            <img class="img-fluid" src="imagenes/untercio.jpg" alt="datos curiosos" />
+            <img
+              class="img-fluid"
+              src="imagenes/untercio.jpg"
+              alt="datos curiosos"
+            />
             <h1 class="titulos">
               Un tercio de todos los alimentos que se producen en el mundo se
               desperdician
@@ -153,17 +160,15 @@
         </div>
       </div>
       <div>
-        <section>
-          <p>
-            Esto representa 1300 millones de toneladas de alimentos, de los
-            cuales el 14% corresponde al sector de los servicios alimentarios
-            (cáterin, hoteles y restaurantes)
-          </p>
-        </section>
+        <p>
+          Esto representa 1300 millones de toneladas de alimentos, de los cuales
+          el 14% corresponde al sector de los servicios alimentarios (cáterin,
+          hoteles y restaurantes)
+        </p>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
+      <div class="container-fluid">
+        <div class="row g-0">
+          <div class="col-lg-12">
             <img
               class="img-fluid sin-padding"
               style="margin-top: 15rem"
@@ -174,7 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
             <img
@@ -192,12 +197,14 @@
               <li>DISFRÚTALO CON UN DESCUENTO EXTRA</li>
               <li>AYUDA AL PLANETA</li>
             </ul>
-            <button><span class="boton">DESCARGA LA APLICACIÓN</span></button>
+            <button>DESCARGA LA APLICACIÓN</button>
           </div>
         </div>
       </div>
     </main>
-    <footer>© 2023 Todos los derechos reservados.</footer>
+    <footer class="container-fluid">
+      © 2023 Todos los derechos reservados.
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
