--- a/negocio.html
+++ b/negocio.html
@@ -1,103 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INICIO</title>
-    <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida">
-    <link rel="stylesheet" href="estilos/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-          crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/85f636b7ea.js" crossorigin="anonymous"></script>
-        </head>
-        
-        <body>
-          <header class="header">
-            <a href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
-            </a>
-            <a href="index.html">INICIO</a>
-            <a href="iniciativas.html">INICIATIVAS</a>
-            <a href="negocio.html">NEGOCIO</a>
-            <a href="usuario.html">USUARIO</a>
-            <a href="tuopinion.html">TU OPINIÓN</a>
-          </header>
-        
-          <header class="header-mobile">
-            <a class="logo-link" href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
-            </a>
-            <input class="side-menu" type="checkbox" id="side-menu" />
-            <label class="hamb" for="side-menu"><i class="fa-solid fa-bars"></i></label>
-            <nav class="nav">
-              <ul class="menu">
-                <li><a class="selected" href="index.html">INICIO</a></li>
-                <li><a href="iniciativas.html">INICIATIVAS</a></li>
-                <li><a href="negocio.html">NEGOCIO</a></li>
-                <li><a href="usuario.html">USUARIO</a></li>
-                <li><a href="tuopinion.html">TU OPINIÓN</a></li>
-              </ul>
-            </nav>
-          </header>
-          <main>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-          <h2>Convierte los alimentos no vendidos en ingresos </h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NEGOCIO</title>
+    <meta
+      name="description"
+      content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
+    />
+    <link rel="stylesheet" href="estilos/estilos.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html">
+          <img
+            class="logo"
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Convierte los alimentos no vendidos en ingresos</h2>
           <p class="texto-negro">Contanos sobre su negocio para comenzar:</p>
-          <form>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,</form>
         </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-2 fondo-negocio">
-      <h2>Beneficios de poner tu negocio en nuestra app</h2>
-     <p class="texto_blanco"> La aplicación permite reducir el desperdicio de alimentos y recuperar dinero con existencias que se habrían desperdiciado: una situación beneficiosa para todos. 
-Además, el 76% de los clientes que descubren una tienda a través de Share Before Waste regresarán como clientes de pago completo.
-
-Registrarse es gratis y no pagarás nada a menos que vendas comida a través de la aplicación.</p>
-</div>
-</div>
-<div>
-          <div class="contenedor">
-            <div class="columna col-1">
-          <p class="texto-negro">Cómo funciona</p>
-          <p class="texto-negro">Complete el formulario de consulta para registrar su negocio en Share 
-            before waste y agregue sus excedentes de comida en la aplicación.</p>
-            <button><p class="boton">INSTRUCTIVO</p></button>
       </div>
     </div>
-    <h2>Empresas que trabajan con nosotros</h2>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="imagenes/empresa1.png" class="d-block w-100" alt="empresa que usa nuestros servicios">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-floating mb-3 botonblanco" style="color: white">
+            <input
+              type="email"
+              class="form-control"
+              id="floatingInput"
+              placeholder="Name"
+            />
+            <label for="floatingInput">Nombre del Negocio</label>
+          </div>
+          <div class="form-floating mb-3 botonblanco" style="color: white">
+            <input
+              type="email"
+              class="form-control"
+              id="floatingInput"
+              placeholder="Name"
+            />
+            <label for="floatingInput">Numero de teléfono</label>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="imagenes/empresa2.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
-        </div>
-        <div class="carousel-item">
-          <img src="imagenes/empresa3.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
-        </div>
-        <div class="carousel-item">
-          <img src="imagenes/empresa4.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
-        </div>
-        <div class="carousel-item">
-          <img src="imagenes/empresa5.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/empresa6.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/empresa7.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
       </div>
     </div>
-  </main>
-  <footer>© 2023 Todos los derechos reservados.</footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
-      crossorigin="anonymous"></script>
-    </body>
-  </html>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-floating mb-3 botonblanco" style="color: white">
+            <input
+              type="email"
+              class="form-control"
+              id="floatingInput"
+              placeholder="Name"
+            />
+            <label for="floatingInput">Dirección de correo electrónico</label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-floating mb-3 botonblanco" style="color: white">
+            <input
+              type="email"
+              class="form-control"
+              id="floatingInput"
+              placeholder="Name"
+            />
+            <label for="floatingInput">Ciudad</label>
+          </div>
+          <button style="background-image: url(imagenes/boton.svg)">
+            REGISTRATE AHORA
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <h2>Beneficios de poner tu negocio en nuestra app</h2>
+        <p class="texto_blanco">
+          La aplicación permite reducir el desperdicio de alimentos y recuperar
+          dinero con existencias que se habrían desperdiciado: una situación
+          beneficiosa para todos. Además, el 76% de los clientes que descubren
+          una tienda a través de Share Before Waste regresarán como clientes de
+          pago completo. Registrarse es gratis y no pagarás nada a menos que
+          vendas comida a través de la aplicación.
+        </p>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <p class="texto-negro">Cómo funciona</p>
+        <p class="texto-negro">
+          Complete el formulario de consulta para registrar su negocio en Share
+          before waste y agregue sus excedentes de comida en la aplicación.
+        </p>
+        <button><p class="boton">INSTRUCTIVO</p></button>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <h2>Empresas que trabajan con nosotros</h2>
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="imagenes/empresa1.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa2.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa3.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa4.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa5.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa6.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="imagenes/empresa7.png"
+                class="d-block w-100"
+                alt="empresa que usa nuestros servicios"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>© 2023 Todos los derechos reservados.</footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
