--- a/negocio.html
+++ b/negocio.html
@@ -16,7 +16,7 @@
         <body>
           <header class="header">
             <a href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+              <img class="logo img-fluid" src="imagenes/share_before_waste_logo.png" alt="logo" />
             </a>
             <a href="index.html">INICIO</a>
             <a href="iniciativas.html">INICIATIVAS</a>
@@ -27,7 +27,7 @@
         
           <header class="header-mobile">
             <a class="logo-link" href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+              <img class="logo img-fluid" src="imagenes/share_before_waste_logo.png" alt="logo" />
             </a>
             <input class="side-menu" type="checkbox" id="side-menu" />
             <label class="hamb" for="side-menu"><i class="fa-solid fa-bars"></i></label>
@@ -72,26 +72,26 @@ Registrarse es gratis y no pagarás nada a menos que vendas comida a través de 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/empresa1.png" class="d-block w-100" alt="empresa que usa nuestros servicios">
+          <img src="imagenes/empresa1.png" class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa2.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+          <img src="imagenes/empresa2.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa3.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+          <img src="imagenes/empresa3.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa4.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+          <img src="imagenes/empresa4.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa5.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+          <img src="imagenes/empresa5.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imagenes/empresa6.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+        <img src="imagenes/empresa6.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
       </div>
       <div class="carousel-item">
-        <img src="imagenes/empresa7.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
+        <img src="imagenes/empresa7.png"class="d-block w-100 img-fluid" alt="empresa que usa nuestros servicios">
       </div>
     </div>
   </main>
