--- a/usuario.html
+++ b/usuario.html
@@ -25,7 +25,7 @@
     <header class="header">
       <a href="/index.html">
         <img
-          class="logo"
+          class="logo img-fluid"
           src="imagenes/share_before_waste_logo.png"
           alt="logo"
         />
@@ -40,7 +40,7 @@
     <header class="header-mobile">
       <a class="logo-link" href="/index.html">
         <img
-          class="logo"
+          class="logo img-fluid"
           src="imagenes/share_before_waste_logo.png"
           alt="logo"
         />
@@ -63,17 +63,21 @@
       <div class="container-fluid sin-padding">
         <div class="row">
           <div class="col-md-12">
-            <img class="img-fluid" src="imagenes/fondousuario.jpg" alt="fondo usuario">
+            <img
+              class="img-fluid"
+              src="imagenes/fondousuario.jpg"
+              alt="fondo usuario"
+            />
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <div>
-              <h2>
+              <h1 class="titulousuario">
                 Cada año se desperdician 2.5 mil millones de toneladas de
                 alimento
-              </h2>
-              <p class="texto-negro">
+              </h1>
+              <p class="textousuario">
                 Soñamos con un planeta sin desperdicio de alimentos. Todos los
                 días, la comida no vendida de los restaurantes, supermercados,
                 cafeterías y tiendas favoritas se desperdicia simplemente porque
@@ -81,8 +85,12 @@
                 Waste y obtené comida a un precio mejor.
               </p>
               <div>
-                <button>DESCARGA LA APLICACIÓN</button>
-                <button>APLICATIVO</button>
+                <button class="boton">
+                  <p class="botontexto">DESCARGA LA APLICACIÓN</p>
+                </button>
+                <button class="boton">
+                  <p class="botontexto">APLICATIVO</p>
+                </button>
               </div>
             </div>
           </div>
