--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <a href="/index.html">
         <img
-          class="logo"
+          class="logo img-fluid"
           src="imagenes/share_before_waste_logo.png"
           alt="logo"
         />
@@ -40,7 +40,7 @@
     <header class="header-mobile">
       <a class="logo-link" href="/index.html">
         <img
-          class="logo"
+          class="logo img-fluid"
           src="imagenes/share_before_waste_logo.png"
           alt="logo"
         />
@@ -61,59 +61,55 @@
     </header>
     <main>
       <div class="container-fluid sin-padding">
-        <div class="row">
+        <div class="row g-0" style="background-image: url(imagenes/fondoinicio.jpg);" >
           <div class="col-lg-12">
-            <img
-              class="img-fluid"
-              src="imagenes/fondoinicio.jpg"
-              alt="fondo verde"
-            />
-          </div>
+          <h1 class="text-white">Salvemos juntos la buena comida</h1>
+          <p class="text-white">
+            El desperdicio de alimentos es un gran problema y nosotros podemos
+            ser una solución.
+          </p>
+          <p class="text-white">
+            Share Before Waste es la aplicación que te permite rescatar los
+            alimentos no vendidos en tus lugares favoritos.
+          </p>
         </div>
+      </div>
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-12">
-            <h1 class="titulos">Salvemos juntos la buena comida</h1>
-            <p>
-              El desperdicio de alimentos es un gran problema y nosotros podemos
-              ser una solución.
-            </p>
-            <p>
-              Share Before Waste es la aplicación que te permite rescatar los
-              alimentos no vendidos en tus lugares favoritos.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div>
-            <h2>Sobre nosotros</h2>
-            <p class="texto-negro">
-              Somos una empresa B que busca terminar con el desperdicio de
-              comida y darle una alternativa a aquellos que lo necesitan.
-              Creemos que un mundo sin hambre es posible. Queremos inspirar a
-              muchos jóvenes para dejar de ver el desperdicio como un problema,
-              para convertirlo en una oportunidad. El desperdicio es oro, y se
-              puede hacer mucho con él. Pero esto depende de la voluntad, la
-              tecnología y las políticas, que deben combinarse para lograr ese
-              fin. Por eso decidimos desarrollar la aplicación Share Before
-              Waste para comenzar a tratar los residuos de manera diferente,
-              algo que no es difícil, que generará un gran beneficio para las
-              personas y el medio ambiente.
-            </p>
-            <img
-              class="img-fluid rounded"
-              src="imagenes/cliente.png"
-              alt="cliente"
-            />
+          <div class="col-lg-6">
+            <div>
+              <h2 class="tituloverde">Sobre nosotros</h2>
+              <p class="text-dark">
+                Somos una empresa B que busca terminar con el desperdicio de
+                comida y darle una alternativa a aquellos que lo necesitan.
+                Creemos que un mundo sin hambre es posible. Queremos inspirar a
+                muchos jóvenes para dejar de ver el desperdicio como un
+                problema, para convertirlo en una oportunidad. El desperdicio es
+                oro, y se puede hacer mucho con él. Pero esto depende de la
+                voluntad, la tecnología y las políticas, que deben combinarse
+                para lograr ese fin. Por eso decidimos desarrollar la aplicación
+                Share Before Waste para comenzar a tratar los residuos de manera
+                diferente, algo que no es difícil, que generará un gran
+                beneficio para las personas y el medio ambiente.
+              </p>
+              <div class="col-lg-6 row">
+                <img
+                  class="img-fluid float-end"
+                  src="imagenes/cliente.png"
+                  alt="cliente"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
-            <h2>Misión</h2>
-            <p class="texto-negro">
-              > Reducir el desperdicio de alimentos y marcar la diferencia.
-              Somos una empresa emergente cuya misión es hacer más sostenible el
+            <h2 class="tituloverde">Misión</h2>
+            <p class="text-dark">
+              Reducir el desperdicio de alimentos y marcar la diferencia. Somos
+              una empresa emergente cuya misión es hacer más sostenible el
               sistema alimentario mundial. Nuestra aplicación ofrece a las
               personas poder comprar comida no vendida de los locales de su
               alrededor y que de otro modo se desperdiciaría. En lugar de tirar
@@ -124,11 +120,11 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
-            <h2>Valores</h2>
-            <p class="texto-negro">
+            <h2 class="tituloverde">Valores</h2>
+            <p class="text-dark">
               Son la expresión de los principios que nos guían y por los que
               respondemos.
             </p>
@@ -141,40 +137,35 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid">
-        <div class="row g-0 ">
+      <div class="container-fluid sin-padding"">
+        <div class="row g-0 " style="background-image: url(imagenes/untercio.jpg);" >
           <div class="col-lg-12">
-            <img class="img-fluid" src="imagenes/untercio.jpg" alt="datos curiosos" />
-            <h1 class="titulos">
+            <h1 class="text-white left">
               Un tercio de todos los alimentos que se producen en el mundo se
               desperdician
             </h1>
-          </div>
-        </div>
+        <p class="text-white left">
+          Esto representa 1300 millones de toneladas de alimentos, de los cuales
+          el 14% corresponde al sector de los servicios alimentarios (cáterin,
+          hoteles y restaurantes)
+        </p>
       </div>
-      <div>
-        <section>
-          <p>
-            Esto representa 1300 millones de toneladas de alimentos, de los
-            cuales el 14% corresponde al sector de los servicios alimentarios
-            (cáterin, hoteles y restaurantes)
-          </p>
-        </section>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
+    </div>
+  </div>
+  <span>
+      <div class="container-fluid sin-padding">
+        <div class="row g-0">
+          <div class="col-lg-12">
             <img
-              class="img-fluid sin-padding"
-              style="margin-top: 15rem"
+              class="img-fluid"
               src="imagenes/datoscuriosos.jpg"
-              alt="datos curiosos sobre el
-                        desperdicio de alimentos"
+              alt="datos curiosos sobre el desperdicio de alimentos"
             />
           </div>
         </div>
       </div>
-      <div class="container">
+    </span>
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
             <img
@@ -182,8 +173,8 @@
               src="imagenes/usandolaapp.jpg"
               alt="cliente que sostiene productos del delivery"
             />
-            <h2>Involúcrate</h2>
-            <p class="texto-negro">
+            <h2 class="tituloverde">Involúcrate</h2>
+            <p class="text-dark">
               ¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer
               bien mientras generas un impacto.
             </p>
@@ -192,12 +183,14 @@
               <li>DISFRÚTALO CON UN DESCUENTO EXTRA</li>
               <li>AYUDA AL PLANETA</li>
             </ul>
-            <button><span class="boton">DESCARGA LA APLICACIÓN</span></button>
+            <button>DESCARGA LA APLICACIÓN</button>
           </div>
         </div>
       </div>
     </main>
-    <footer>© 2023 Todos los derechos reservados.</footer>
+    <footer class="container-fluid">
+      © 2023 Todos los derechos reservados.
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
@@ -205,3 +198,4 @@
     ></script>
   </body>
 </html>
+
