--- a/iniciativas.html
+++ b/iniciativas.html
@@ -16,7 +16,7 @@
         <body>
           <header class="header">
             <a href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+              <img class="logo img-fluid" src="imagenes/share_before_waste_logo.png" alt="logo" />
             </a>
             <a href="index.html">INICIO</a>
             <a href="iniciativas.html">INICIATIVAS</a>
@@ -27,7 +27,7 @@
         
           <header class="header-mobile">
             <a class="logo-link" href="/index.html">
-              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+              <img class="logo img-fluid" src="imagenes/share_before_waste_logo.png" alt="logo" />
             </a>
             <input class="side-menu" type="checkbox" id="side-menu" />
             <label class="hamb" for="side-menu"><i class="fa-solid fa-bars"></i></label>
@@ -57,16 +57,16 @@
                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="imagenes/comedor1.png" class="d-block w-100" alt="comedor de personas vulnerables">
+                    <img src="imagenes/comedor1.png" class="d-block w-100 img-fluid" alt="comedor de personas vulnerables">
                   </div>
                   <div class="carousel-item">
-                    <img src="imagenes/comedor2.png"class="d-block w-100" alt="comedor de personas vulnerables">
+                    <img src="imagenes/comedor2.png"class="d-block w-100 img-fluid" alt="comedor de personas vulnerables">
                   </div>
                   <div class="carousel-item">
-                    <img src="imagenes/comedor3.png"class="d-block w-100" alt="comedor de personas vulnerables">
+                    <img src="imagenes/comedor3.png"class="d-block w-100 img-fluid" alt="comedor de personas vulnerables">
                   </div>
                   <div class="carousel-item">
-                    <img src="imagenes/comedor4.png"class="d-block w-100" alt="comedor de personas vulnerables">
+                    <img src="imagenes/comedor4.png"class="d-block w-100 img-fluid" alt="comedor de personas vulnerables">
                   </div>
                 </div>
               </div>
