--- a/usuario.html
+++ b/usuario.html
@@ -125,14 +125,14 @@
       </div>
     </main>
     <footer class="container-fluid mt-5 mb-1">
-      <p class="text-center fw-bold space-between mt-5 mb-0">
+      <p class=" texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
-      <p class="text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class="text-center fw-bold space-between mb-0">
+      <p class=" texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class=" texto text-center fw-bold space-between mb-0">
         Trabajo grupal Diseño y Desarrollo Web
       </p>
-      <p class="text-center fw-bold space-between mb-0">
+      <p class=" texto text-center fw-bold space-between mb-0">
         Las imágenes cuentan con derechos reservados de Freepik
       </p>
       <img
@@ -152,3 +152,4 @@
     ></script>
   </body>
 </html>
+
