--- a/tuopinion.html
+++ b/tuopinion.html
@@ -108,14 +108,14 @@
       </button>
     </main>
     <footer class="container-fluid mt-5 mb-1">
-      <p class="text-center fw-bold space-between mt-5 mb-0">
+      <p class=" texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
-      <p class="text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class="text-center fw-bold space-between mb-0">
+      <p class=" texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class=" texto text-center fw-bold space-between mb-0">
         Trabajo grupal Diseño y Desarrollo Web
       </p>
-      <p class="text-center fw-bold space-between mb-0">
+      <p class=" texto text-center fw-bold space-between mb-0">
         Las imágenes cuentan con derechos reservados de Freepik
       </p>
       <img
@@ -135,3 +135,4 @@
     ></script>
   </body>
 </html>
+
