--- a/iniciativas.html
+++ b/iniciativas.html
@@ -65,6 +65,21 @@
       </div>
     </nav>
     <main>
+      <div class="container-fluid px-0">
+        <div class="row">
+          <img class="img-fluid" src="imagenes/donaciones.png" />
+          <div class="col-md-12 text px-0" style="position: relative" ;>
+            <p
+              class="text-white fw-bold ps-5 ms-5 fs-4"
+              style="align-items: center; position: absolute; bottom: 20px"
+              ;
+            >
+              Tu donación cambia vidas y hace la diferencia a quienes más lo
+              necesitan.
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
@@ -133,14 +148,14 @@
       </div>
     </main>
     <footer class="container-fluid mt-5 mb-1">
-      <p class=" texto text-center fw-bold space-between mt-5 mb-0">
+      <p class="texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="texto text-center fw-bold space-between mb-0">
         Trabajo grupal Diseño y Desarrollo Web
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">
         Las imágenes cuentan con derechos reservados de Freepik
       </p>
       <img
@@ -160,4 +175,3 @@
     ></script>
   </body>
 </html>
-
