--- a/usuario.html
+++ b/usuario.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <main>
-      <div class="container-fluid text-start px-0 mb">
+      <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid mb-5" src="./imagenes/fondousuario.jpg" />
