--- a/iniciativas.html
+++ b/iniciativas.html
@@ -67,27 +67,19 @@
     <main>
       <div class="container-fluid px-0">
         <div class="row">
-          <img class="img-fluid" src="imagenes/donaciones.png" />
+          <img class="img-fluid" src="imagenes/donacion2.jpg" />
           <div class="col-md-12 text px-0" style="position: relative" ;>
-            <p
-              class="text-white fw-bold ps-5 ms-5 fs-4"
-              style="align-items: center; position: absolute; bottom: 20px"
-              ;
-            >
-              Tu donación cambia vidas y hace la diferencia a quienes más lo
-              necesitan.
-            </p>
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="text-success ms-4 mb-3 mt-3">
+            <h1 class="text-success ms-4 mb-3 mt-5">
               ¿Qué pasa si no se logra vender todo el excedente en un día?
             </h1>
             <div>
-              <p class="text-dark fs-3 ms-4">
+              <p class="text-dark fs-3 ms-4 mt-4 mb-5">
                 Somos una empresa B que busca terminar con el desperdicio de
                 comida y darle una alternativa a aquellos que lo necesitan.
                 Creemos que un mundo sin hambre es posible.Queremos inspirar a
@@ -116,28 +108,28 @@
                 <div class="carousel-item active">
                   <img
                     src="imagenes/comedor1.png"
-                    class="d-block w-100"
+                    class="d-block w-100 ml-2 me-3"
                     alt="comedor de personas vulnerables"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/comedor2.png"
-                    class="d-block w-100"
+                    class="d-block w-100 ml-2 me-3"
                     alt="comedor de personas vulnerables"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/comedor3.jpg"
-                    class="d-block w-100"
+                    class="d-block w-100 ml-2 me-3"
                     alt="comedor de personas vulnerables"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/comedor4.jpg"
-                    class="d-block w-100"
+                    class="d-block w-100 ml-2 me-3"
                     alt="comedor de personas vulnerables"
                   />
                 </div>
