--- a/iniciativas.html
+++ b/iniciativas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>INICIO</title>
+    <title>INICIATIVAS</title>
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -65,10 +65,29 @@
       </div>
     </nav>
     <main>
-      <div class="container-fluid px-0">
+      <div class="container-fluid text-start px-0">
         <div class="row">
-          <img class="img-fluid" src="imagenes/donacion2.jpg" />
-          <div class="col-md-12 text px-0" style="position: relative" ;>
+          <div class="col-md-12" style="position: relative">
+            <img class="img-fluid w-100" src="imagenes/donacion2.jpg" />
+            <div style="position: absolute; top: 10px">
+              <div class="card" style="width: 65rem">
+                <div class="card-body">
+                  <h5 class="card-title bold text-dark">
+                    Quiero apoyar con donaciones mensuales de
+                  </h5>
+                  <bottom class="border-dark">1000</bottom>
+                  <bottom>1500</bottom>
+                  <bottom>2000</bottom>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
