--- a/usuario.html
+++ b/usuario.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>INICIO</title>
+    <title>USUARIO</title>
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -125,14 +125,14 @@
       </div>
     </main>
     <footer class="container-fluid mt-5 mb-1">
-      <p class=" texto text-center fw-bold space-between mt-5 mb-0">
+      <p class="texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="texto text-center fw-bold space-between mb-0">
         Trabajo grupal Diseño y Desarrollo Web
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">
         Las imágenes cuentan con derechos reservados de Freepik
       </p>
       <img
@@ -152,4 +152,3 @@
     ></script>
   </body>
 </html>
-
