--- a/iniciativas.html
+++ b/iniciativas.html
@@ -69,23 +69,27 @@
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid w-100" src="imagenes/donacion2.jpg" />
-            <div style="position: absolute; top: 10px">
-              <div class="card" style="width: 65rem">
-                <div class="card-body">
-                  <h5 class="card-title bold text-dark">
-                    Quiero apoyar con donaciones mensuales de
-                  </h5>
-                  <bottom class="border-dark">1000</bottom>
-                  <bottom>1500</bottom>
-                  <bottom>2000</bottom>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                </div>
+            <div class="bg-light rounded"style="position: absolute; top: 10px" >
+              <div class="mb-3 bg-light rounded" >
+                <label for="exampleFormControlInput1" class=" form-label"
+                  >Email address</label
+                >
+                <input
+                  type="email"
+                  class="rounded form-control bg-light "
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                />
+              </div>
+              <div class="mb-3 bg-light rounded  ">
+                <label for="exampleFormControlTextarea1" class="form-label"
+                  >Example textarea</label
+                >
+                <textarea
+                  class="form-control bg-light rounded "
+                  id="exampleFormControlTextarea1"
+                  rows="3"
+                ></textarea>
               </div>
             </div>
           </div>
