--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container-fluid text-left fondo px-0">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="text-success pt-4 ms-4">Sobre nosotros</h1>
+            <h1 class=" pt-4 ms-4" style="color:#1A4301">Sobre nosotros</h1>
             <p class="text-dark fs-3 ms-4">
               Somos una empresa B que busca terminar con el desperdicio de
               comida y darle una alternativa a aquellos que lo necesitan.
@@ -115,7 +115,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 pt-5">
-            <h1 class="text-success ms-4">Misión</h1>
+            <h1 class="ms-4"style="color:#1A4301">Misión</h1>
             <p class="text-dark fs-3 ms-4">
               Reducir el desperdicio de alimentos y marcar la diferencia. Somos
               una empresa emergente cuya misión es hacer más sostenible el
@@ -128,7 +128,7 @@
             </p>
           </div>
           <div class="col-md-6 pt-5">
-            <h1 class="text-success ms-4">Valores</h1>
+            <h1 class=" ms-4"style="color:#1A4301">Valores</h1>
             <p class="text-dark fs-3 ms-4">
               Son la expresión de los principios que nos guían y por los que
               respondemos.
@@ -183,7 +183,7 @@
             />
           </div>
           <div class="col-md-6 pt-5">
-            <h1 class="text-success ms-4">Involúcrate</h1>
+            <h1 class=" ms-4"style="color:#1A4301">Involúcrate</h1>
             <p class="text-dark fs-3 fw-bold ms-4">
               ¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer
               bien mientras generas un impacto.
@@ -210,7 +210,7 @@
             </ul>
             <button
               type="button"
-              class="rounded-pill btn btn-success fs-3 fw-bold ms-4"
+              class="rounded-pill fs-3 text-white fw-bold ms-4"style="border-color:#1A4301;background-color:#1A4301";
             >
               DESCARGA LA APLICACIÓN
             </button>
