--- a/negocio.html
+++ b/negocio.html
@@ -68,7 +68,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-success ms-4 mt-3">
+            <h1 class=" ms-4 mt-3"style="color:#1A4301";>
               Convierte los alimentos no vendidos en ingresos
             </h1>
             <p class="text-black fs-3 ms-4">
@@ -86,7 +86,7 @@
             >
               <input
                 type="email"
-                class="form-control border border-success rounded-pill"
+                class="form-control border rounded-pill"style="border-color:#1A4301"
                 id="floatingInput"
                 placeholder="Dirección de correo electrónico"
               />
@@ -104,7 +104,7 @@
             >
               <input
                 type="email"
-                class="form-control border border-success rounded-pill"
+                class="form-control border rounded-pill"style="border-color:#1A4301";;
                 id="floatingInput"
                 placeholder="Ciudad"
               />
@@ -112,8 +112,7 @@
             </div>
             <button
               type="button"
-              class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mb-3"
-            >
+              class="rounded-pill btn fs-3 fw-bold ms-4 mb-3"style="border-color:#1A4301";>
               REGISTRATE AHORA
             </button>
           </div>
@@ -165,7 +164,8 @@
               >
                 <input
                   type="email"
-                  class="form-control border border-success rounded-pill"
+                  style="border-color:#1A4301;background-color:#1A4301";
+                  class="form-control border rounded-pill"
                   id="emailInput"
                   placeholder="Dirección de correo electrónico"
                 />
@@ -188,7 +188,7 @@
                 </div>
                 <button
                   type="submit"
-                  class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mb-3"
+                  class="rounded-pill btn fs-3 fw-bold ms-4 mb-3"style="border-color:#1A4301;background-color:#1A4301";
                 >
                   REGÍSTRATE AHORA
                 </button>
