--- a/iniciativas.html
+++ b/iniciativas.html
@@ -98,7 +98,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="text-success ms-4 mb-3 mt-5">
+            <h1 class="ms-4 mb-3 mt-5"style="color:#1A4301">
               ¿Qué pasa si no se logra vender todo el excedente en un día?
             </h1>
             <div>
