--- a/tuopinion.html
+++ b/tuopinion.html
@@ -68,7 +68,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="text-success ms-4 mt-3">Tu opinión nos importa</h1>
+            <h1 class="ms-4 mt-3"style="color:#1A4301";>Tu opinión nos importa</h1>
             <p class="text-dark fs-3 ms-4">
               Siempre estaremos felices de saber de vos! Ya sea una simple
               curiosidad o una pregunta urgente, envianos un correo electrónico
@@ -92,7 +92,7 @@
           <div class="form-floating mb-3" style="color: white">
             <input
               type="email"
-              class="form-control border border-success rounded-pill"
+              class="form-control border rounded-pill"style="color:#1A4301;";
               id="floatingInput"
               placeholder="Correo electrónico "
             />
@@ -102,7 +102,7 @@
       </div>
       <button
         type="button"
-        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"
+        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"style="border-color:#1A4301;background-color:#1A4301;color:white";;
       >
         ¡SUSCRIBIRME!
       </button>
