--- a/usuario.html
+++ b/usuario.html
@@ -101,13 +101,13 @@
               type="button"
               class="rounded-pill btn btn-success fs-3 fw-bold ms-4"style="border-color:#1A4301;background-color:#1A4301;color:white";;
             >
-              REGISTRATE AHORA
+            DESCARGA LA APLICACIÓN
             </button>
             <button
               type="button"
               class="rounded-pill btn fs-3 fw-bold ms-4"style="border-color:#1A4301;background-color:#1A4301;color:white;";
             >
-              INSTRUCTIVO<svg
+              INSTRUCTIVO <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="22"
                 height="16"
