--- a/iniciativas.html
+++ b/iniciativas.html
@@ -68,22 +68,23 @@
       <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid w-100" src="imagenes/donacion2.jpg" />
+            <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
             <div class="bg-light rounded"style="position: absolute; top: 10px" >
               <div class="mb-3 bg-light rounded" >
+                <p class="text-dark bold">Quiero apoyar con donaciones mensuales de</p>
                 <label for="exampleFormControlInput1" class=" form-label"
-                  >Email address</label
+                  >$1000</label
                 >
                 <input
-                  type="email"
+                  type="text"
                   class="rounded form-control bg-light "
                   id="exampleFormControlInput1"
-                  placeholder="name@example.com"
+                  placeholder="$1000"
                 />
               </div>
               <div class="mb-3 bg-light rounded  ">
                 <label for="exampleFormControlTextarea1" class="form-label"
-                  >Example textarea</label
+                  >$1500</label
                 >
                 <textarea
                   class="form-control bg-light rounded "
