--- a/tuopinion.html
+++ b/tuopinion.html
@@ -68,7 +68,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="ms-4 mt-3"style="color:#1A4301";>Tu opinión nos importa</h1>
+            <h1 class="ms-4 mt-3" style="color: #1a4301" ;>
+              Tu opinión nos importa
+            </h1>
             <p class="text-dark fs-3 ms-4">
               Siempre estaremos felices de saber de vos! Ya sea una simple
               curiosidad o una pregunta urgente, envianos un correo electrónico
@@ -92,7 +94,9 @@
           <div class="form-floating mb-3" style="color: white">
             <input
               type="email"
-              class="form-control border rounded-pill"style="color:#1A4301;";
+              class="form-control border rounded-pill"
+              style="color: #1a4301"
+              ;
               id="floatingInput"
               placeholder="Correo electrónico "
             />
@@ -102,20 +106,54 @@
       </div>
       <button
         type="button"
-        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"style="border-color:#1A4301;background-color:#1A4301;color:white";;
+        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"
+        style="border-color: #1a4301; background-color: #1a4301; color: white"
+        ;;
       >
         ¡SUSCRIBIRME!
       </button>
     </main>
+    <div
+      class="container-fluid text-start px-0 mt-3"
+      style="background-color: #1a4301"
+      ;
+    >
+      <div class="row">
+        <div class="col-md-12">
+          <div class="col-md-4">
+            <h1 class="text-white bold ps-3 mt-3">Suscribite</h1>
+          </div>
+          <div class="col-md-12 fs-4">
+            <p class="text-white bold ps-3 mb-5">
+              ¡Sharing es nuestro boletín mensual de actualización, repleto de
+              consejos increíbles para combatir la comida, actualizaciones sobre
+              nuestra misión y sorteos para ganar!
+            </p>
+          </div>
+          <div class="col-md-6 fs-4">
+            <p class="text-white bold ps-3">
+              ¡Unite a la comunidad y recibí “Sharing” directamente en tu
+              bandeja de entrada!
+            </p>
+          </div>
+          <div class="col-md-6 fs-4 mt-3">
+            <p class="text-white bold ps-3">
+              ¡No volverás a perderte ningún truco sobre el desperdicio de
+              alimentos ni la oportunidad de ganar!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="container-fluid mt-5 mb-1">
-      <p class=" texto text-center fw-bold space-between mt-5 mb-0">
+      <p class="texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+      <p class="texto text-center fw-bold space-between mb-0">
         Trabajo grupal Diseño y Desarrollo Web
       </p>
-      <p class=" texto text-center fw-bold space-between mb-0">
+      <p class="texto text-center fw-bold space-between mb-0">
         Las imágenes cuentan con derechos reservados de Freepik
       </p>
       <img
@@ -135,4 +173,3 @@
     ></script>
   </body>
 </html>
-
