--- a/negocio.html
+++ b/negocio.html
@@ -109,7 +109,7 @@
             <div class="form-floating mb-3 ms-4" style="color: white">
               <input
                 type="email"
-                class="form-control border rounded-pill"
+                class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
                 id="floatingInput"
                 placeholder="Dirección de correo electrónico"
@@ -125,7 +125,7 @@
             <div class="form-floating mb-3 ms-4" style="color: white">
               <input
                 type="email"
-                class="form-control border rounded-pill"
+                class="form-control border border-success rounded-pill"
                 style="border-color: #1a4301"
                 ;;
                 id="floatingInput"
@@ -135,8 +135,8 @@
             </div>
             <button
               type="button"
-              class="rounded-pill btn fs-3 fw-bold ms-4 mb-3"
-              style="border-color: #1a4301"
+              class="rounded-pill btn fs-3 fw-bold ms-4 mb-3 text-white "
+              style="border-color: #1a4301;background-color:#1a4301";
               ;
             >
               REGISTRATE AHORA
@@ -170,14 +170,14 @@
           <div class="row">
             <div class="col-md-6 px-5 pt-3">
               <h2>Cómo funciona</h2>
-              <p class="text-black bold fs-3 bold px-5">Complete el formulario de consulta para registrar su negocio en Share before waste
+              <p class="text-black bold fs-3 bold">Complete el formulario de consulta para registrar su negocio en Share before waste
                  y agregue sus excedentes de comida en la aplicación. </p>
             </div>
           </div>
         </div>
         <div class="container-fluid">
           <div class="row">
-            <h2 class=" fw-bold text-center fs-1" style="color: #1a4301";>Empresas que trabajan con nosotros</h2>
+            <h2 class=" fw-bold text-center fs-1 mt-5" style="color: #1a4301";>Empresas que trabajan con nosotros</h2>
             <div
               id="carouselExampleSlidesOnly"
               class="carousel slide"
@@ -186,49 +186,49 @@
                 <div class="carousel-item active">
                   <img
                     src="imagenes/empresa1.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa2.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa3.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa4.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa5.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa6.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="imagenes/empresa7.png"
-                    class="d-block w-100 img-fluid"
+                    class="col-md-1 d-block w-100 img-fluid logoempresa"
                     alt="empresa que usa nuestros servicios"/>
                 </div>
           </div>
