--- a/tuopinion.html
+++ b/tuopinion.html
@@ -68,15 +68,13 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="ms-4 mt-3" style="color: #1a4301" ;>
+            <h1 class="ms-4 mt-3 mt-5 mb-5" style="color: #1a4301" ;>
               Tu opinión nos importa
             </h1>
-            <p class="text-dark fs-3 ms-4">
-              Siempre estaremos felices de saber de vos! Ya sea una simple
-              curiosidad o una pregunta urgente, envianos un correo electrónico
-              a sharebeforewaste@sbw.com. Si deseas atención al cliente,
-              envianos un correo electrónico a soporte@sbw.com.
-            </p>
+            <p class="text-dark fs-4 ms-4 bold">
+              Siempre estaremos felices de saber de vos!</p>
+              <p class="text-dark fs-4 ms-4 bold">
+               Ya sea una simple curiosidad o una pregunta urgente!</p>
           </div>
         </div>
       </div>
@@ -88,41 +86,48 @@
             id="floatingInput"
             placeholder="Nombre y apellido "
           />
-          <label for="floatingInput">Nombre y apellido</label>
+          <label for="floatingInput">Nombre</label>
+        </div>
+        <div class="form-floating mb-3" style="color: white">
+          <input
+            type="email"
+            class="form-control border border-success rounded-pill"
+            id="floatingInput"
+            placeholder="Nombre y apellido "
+          />
+          <label for="floatingInput">Apellido</label>
         </div>
         <div>
           <div class="form-floating mb-3" style="color: white">
             <input
               type="email"
-              class="form-control border rounded-pill"
+              class="form-control border border-success rounded-pill"
               style="color: #1a4301"
               ;
               id="floatingInput"
               placeholder="Correo electrónico "
             />
-            <label for="floatingInput">Correo electrónico</label>
+            <label for="floatingInput">Dirección de correo electrónico</label>
           </div>
         </div>
-      </div>
+        <div class="form-floating mb-3" style="color: white">
+          <label for="exampleFormControlTextarea5" class="form-label">Comentarios</label>
+          <textarea class="form-control border border-success rounded-pill" id="exampleFormControlTextarea5" rows="10"></textarea>
+        </div>
       <button
         type="button"
-        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3"
+        class=" col-md-12 btn btn-success fs-3 fw-bold ms-2 mt-3 mb-5"
         style="border-color: #1a4301; background-color: #1a4301; color: white"
-        ;;
       >
-        ¡SUSCRIBIRME!
+        ENVIAR
       </button>
-    </main>
-    <div
-      class="container-fluid text-start px-0 mt-3"
-      style="background-color: #1a4301"
-      ;
-    >
+      </div>
+    
+      <div class="container-fluid text-start px-0 mt-3"style="background-color: #1a4301";>
       <div class="row">
-        <div class="col-md-12">
-          <div class="col-md-4">
-            <h1 class="text-white bold ps-3 mt-3">Suscribite</h1>
-          </div>
+          <div class="col-md-12">
+            <div class="row">
+            <h1 class="text-white bold ps-3 ms-4 mt-3 mt-5 mb-5">Suscribite</h1>
           <div class="col-md-12 fs-4">
             <p class="text-white bold ps-3 mb-5">
               ¡Sharing es nuestro boletín mensual de actualización, repleto de
@@ -135,17 +140,47 @@
               ¡Unite a la comunidad y recibí “Sharing” directamente en tu
               bandeja de entrada!
             </p>
-          </div>
-          <div class="col-md-6 fs-4 mt-3">
             <p class="text-white bold ps-3">
               ¡No volverás a perderte ningún truco sobre el desperdicio de
               alimentos ni la oportunidad de ganar!
             </p>
           </div>
+            <div class="col-md-4 ms-4">
+              <div class="form-floating mb-3" style="color: white">
+                <input
+                  type="email"
+                  class="form-control border border-success rounded-pill"
+                  id="floatingInput"
+                  placeholder="Nombre y apellido "
+                />
+                <label for="floatingInput">Nombre y apellido</label>
+              </div>
+              <div>
+                <div class="form-floating mb-3" style="color: white">
+                  <input
+                    type="email"
+                    class="form-control border border-success rounded-pill"
+                    style="color: #1a4301"
+                    ;
+                    id="floatingInput"
+                    placeholder="Correo electrónico "
+                  />
+                  <label for="floatingInput">Correo electrónico</label>
+                </div>
+                <button
+        type="button"
+        class="rounded-pill btn btn-success fs-3 fw-bold ms-4 mt-3 mb-5"
+        style="border-color: #1a4301; background-color:white;color: #1a4301";
+      >
+      ¡SUSCRIBIRME!
+      </button>
+              </div>
+          </div>
         </div>
       </div>
     </div>
-    <footer class="container-fluid mt-5 mb-1">
+    </div>
+    <footer class="container-fluid  mb-1">
       <p class="texto text-center fw-bold space-between mt-5 mb-0">
         Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
       </p>
